# mcp-obsidian

./: .gitignore  Cargo.toml  LICENSE  README.md  semantic.md
.github/workflows/: ci.yml
src/: cluster.rs  config.rs  docs.rs  embed.rs  links.rs  main.rs  mapping.rs  memory.rs  project.rs  prompts.rs  recall.rs  resources.rs  server.rs  similarity.rs  watcher.rs
