[package]
name = "mcp-obsidian"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Adriansya <47062524+adrnsyr@users.noreply.github.com>"]
description = "MCP server (Rust) for writing, reading, searching, and mapping per-project memory into an Obsidian vault — plain Markdown, no database."
license = "MIT"
readme = "README.md"
repository = "https://github.com/adrnsyr/mcp-obsidian"
homepage = "https://github.com/adrnsyr/mcp-obsidian"
keywords = ["mcp", "obsidian", "memory", "markdown", "llm"]
categories = ["command-line-utilities", "text-processing"]

[features]
# Aktifkan pencarian semantik (embeddings lokal via candle, pure-Rust).
# Build default TIDAK menyertakan ini agar tetap ringan & offline-friendly.
# Aktifkan dengan: cargo build --release --features semantic
semantic = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

# Aktifkan auto-regen _MOC.md saat memori diedit langsung di Obsidian (file watcher).
# Aktifkan dengan: cargo build --release --features watch
watch = ["dep:notify-debouncer-full"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Opsional: hanya ikut terkompilasi bila feature `semantic` aktif ---
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers = { version = "0.23", optional = true }
hf-hub = { version = "0.5", optional = true }

# --- Opsional: hanya ikut terkompilasi bila feature `watch` aktif ---
notify-debouncer-full = { version = "0.7", optional = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
